--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -133,6 +133,7 @@
     "armorFactor":              "Armor Factor",
     "charmFactor":              "Charm Factor",
     "jewelFactor":              "Jewel Factor",
+    "byRequiredConditions":     "By Required Conditions",
     "all":                      "All",
     "unlimited":                "Unlimited",
     "asc":                      "ASC",
@@ -161,6 +162,7 @@
     "conditions":               "Conditions",
     "requiredEquips":           "Required Equips",
     "requiredJewels":           "Required Jewels",
+    "requiredSkills":           "Required Skills",
     "additionalSets":           "Additional Sets",
     "additionalSkills":         "Additional Skills",
     "noResult":                 "No Result",
