--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -133,6 +133,7 @@
     "armorFactor":              null,
     "charmFactor":              null,
     "jewelFactor":              null,
+    "byRequiredConditions":     null,
     "all":                      null,
     "unlimited":                null,
     "asc":                      null,
@@ -161,6 +162,7 @@
     "conditions":               null,
     "requiredEquips":           null,
     "requiredJewels":           null,
+    "requiredSkills":           null,
     "additionalSets":           null,
     "additionalSkills":         null,
     "noResult":                 null,
