--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -133,6 +133,7 @@
     "armorFactor":              "裝甲因子",
     "charmFactor":              "護石因子",
     "jewelFactor":              "裝飾珠因子",
+    "byRequiredConditions":     "根據需求條件",
     "all":                      "全部",
     "unlimited":                "無限",
     "asc":                      "升冪",
@@ -161,6 +162,7 @@
     "conditions":               "設定條件",
     "requiredEquips":           "需求裝備",
     "requiredJewels":           "需求裝飾珠",
+    "requiredSkills":           "需求技能",
     "additionalSets":           "額外套裝",
     "additionalSkills":         "額外技能",
     "noResult":                 "沒有相關結果",
